fix: share buttons only sharing page slug; fix: spacing on pieces pages (#408)
* fix: share buttons only sharing page slug; fix: spacing on pieces pages

* fix: copied alert overflowing box

* feat: style share links to have copy link next to title and text

--- a/site/assets/src/scss/composition/switcher.scss
+++ b/site/assets/src/scss/composition/switcher.scss
@@ -33,6 +33,10 @@
     --switcher-max-width: 30rem;
 }
 
+.switcher-width-25 {
+    --switcher-max-width: 25rem;
+}
+
 .switcher-width-20 {
     --switcher-max-width: 20rem;
 }
