--- a/site/assets/src/scss/styles.scss
+++ b/site/assets/src/scss/styles.scss
@@ -613,9 +613,6 @@ input::-webkit-calendar-picker-indicator {
   transition: opacity 300ms ease 200ms,
     transform 500ms cubic-bezier(0.5,0.05,0.2,1.5) 200ms;
   border-radius: var(--border-radius);
-  width: fit-content;
-  padding-inline: spacing(3);
-  margin-inline: auto;
 }
 .context-alert:after {
     content: "";
